--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
  <body>
   <h1>Welcome to this test webpage</h1>
   <p>
-   This page is a test on HTML code and to check if I still remember it after touching on it for a week or two almost a year ago.
+   This page is a test on HTML code and to check if I still remember it after touching on it for maybe a week or two almost a year ago. Anyway, how's your week going?
   </p>
+  <h2>What does this do</h2>
  </body>
 </html>
