--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
    <p> <!-- p tag for paragraphs -->
     This page is a test on HTML code and to check if I still remember it after touching on it for maybe a week or two almost a year ago. Anyway, how's your week going?
    </p>
+   <img src="Dollar General.jpg" alt="Locational Anomaly Classifiction Dollar General"> <!-- src and alt are attributed. Alt will be read to users with impaired vision. -->
   </body>
  </html> <!-- HTML closing tag -->
