--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <body> <!-- contains the code for everything visible on the webpage -->
    <h1>Welcome to this test webpage</h1> <!-- main heading. Larger numbers like h2 are for subheadings -->
    <p> <!-- p tag for paragraphs -->
-    This page is a test on HTML code and to check if I still remember it after touching on it for maybe a week or two almost a year ago. Anyway, how's your week going?
-    <b> Have you ever been to a Dollar General? </b>
+    This page is a test on HTML code and to check if I still remember it after touching on it for maybe a week or two almost a year ago. Anyway, how's your week going? <b> Have you ever been to a Dollar General? </b>
    </p>
    <img src="Dollar General.jpg" alt="Locational Anomaly Classifiction Dollar General"> <!-- src and alt are attributed. Alt will be read to users with impaired vision. -->
   </body>
