add background for paragraph

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
  <html> <!-- HTML opening tag --> 
   <head> <!-- head sectcion contains info on the webpage -->
    <title>This is a test webpage</title> <!-- shows in the tab -->
+   <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body> <!-- contains the code for everything visible on the webpage -->
    <h1>Welcome to this test webpage</h1> <!-- main heading. Larger numbers like h2 are for subheadings -->
